<resources>
    <string name="app_name">RaiderNAV</string>
    <string name="title_activity_maps">RaiderNAV</string>
    <string name="title_activity_schedule">RaiderNAV</string>
    <string name="title_activity_settings">Settings</string>

    <string name="image_credit">Photo credit: O\'Jay Barbee</string>
    <string name="name_button_gotoschedules">My Schedules</string>
    <string name="name_button_todaysclasses">Today\'s Classes</string>

    <string name="name_button_resetschedule">Reset Schedule</string>
    <string name="name_button_createschedule">Create New Schedule</string>
    <string name="name_button_deleteschedule">Delete Schedule</string>
    <string name="name_button_deletecourse">Delete Course</string>
    <string name="name_button_loadschedule">Load Schedule</string>
    <string name="name_button_saveschedule">Save Schedule</string>
    <string name="name_button_renameschedule">Rename Schedule</string>
    <string name="name_button_savecourse">Save Course</string>
    <string name="name_button_createcourse">Create Course</string>

    <string name="dayofweek_monday">Mon</string>
    <string name="dayofweek_tuesday">Tue</string>
    <string name="dayofweek_wednesday">Wed</string>
    <string name="dayofweek_thursday">Thur</string>
    <string name="dayofweek_friday">Fri</string>
    <string name="dayofweek_saturday">Sat</string>
    <string name="dayofweek_sunday">Sun</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_schedule_single_entry_list">ScheduleSingleEntryListActivity
    </string>
    <string name="title_activity_schedule_single_entry">ScheduleSingleEntryActivity</string>
</resources>
