<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.deaftone.tableware.raidernav.ScheduleActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include
        android:id="@+id/include2"
        layout="@layout/content_schedule" />

    <include
        android:id="@+id/include3"
        layout="@layout/rowbuttonlayout"
        android:layout_width="wrap_content"
        android:layout_height="272dp"
        android:visibility="visible"
        app:layout_anchor="@+id/include2"
        app:layout_anchorGravity="bottom"
        tools:layout_editor_absoluteY="164dp" />

    <!-- EditText
        android:id="@+id/savedText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="70dp"
        android:textStyle="bold"
        android:inputType="text"
        android:textColor="@android:color/holo_red_dark"/ -->

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/name_button_saveschedule"
        app:layout_anchor="@+id/include2"
        app:layout_anchorGravity="left|center" />

    <Button
        android:id="@+id/loadButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/name_button_loadschedule"
        app:layout_anchor="@+id/include2"
        app:layout_anchorGravity="right|center" />

    <Button
        android:id="@+id/createButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginVertical="65dp"
        android:text="@string/name_button_createschedule"
        app:layout_anchor="@+id/include2"
        app:layout_anchorGravity="left" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginVertical="65dp"
        android:text="@string/name_button_deleteschedule"
        app:layout_anchor="@+id/include2"
        app:layout_anchorGravity="right" />

    <!-- android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_dialog_email" / -->

</android.support.design.widget.CoordinatorLayout>
